force-app/main/default/objects/Hardware_Attribute_Pricing__mdt/fields/Attribute_Key__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Key__c</fullName>
    <description>Lookup key for pGroup rows (e.g. P05..P60) and SystemType rows (Production/Staging/Test). Blank for UserTier rows (which key on Min/Max Users instead).</description>
    <label>Attribute Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>