force-app/main/default/objects/Hardware_Attribute_Pricing__mdt/fields/Max_Users__c.field-meta.xml
<CustomField>
    <fullName>Max_Users__c</fullName>
    <description>UserTier rows only: inclusive upper bound of the users-per-partition band. BLANK = open-ended top band (SDD §8 Rule 3: 501+ = 3.0x, no upper cap). Blank for pGroup/SystemType rows.</description>
    <label>Max Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>