force-app/main/default/objects/Hardware_Attribute_Pricing__mdt/fields/Min_Users__c.field-meta.xml
<CustomField>
    <fullName>Min_Users__c</fullName>
    <description>UserTier rows only: inclusive lower bound of the users-per-partition band. Blank for pGroup/SystemType rows.</description>
    <label>Min Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>