force-app/main/default/objects/Hardware_Attribute_Pricing__mdt/fields/Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Table_Type__c</fullName>
    <description>Which pricing table this row belongs to. Exactly one of: pGroup | UserTier | SystemType. HardwarePricingCalculator matches on these exact strings.</description>
    <label>Table Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>