force-app/main/default/objects/Hardware_Attribute_Pricing__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The numeric table value: the MULTIPLIER for pGroup rows (e.g. 1.5) and UserTier rows (e.g. 3.0), or the DISCOUNT PERCENT for SystemType rows (e.g. 25 = 25% off). Interpreted per Table_Type__c by HardwarePricingCalculator.</description>
    <label>Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>